# gather-sun

./: .gitmodules  CMakeLists.txt  camera.c  camera.h  entity.h  event.c  event.h  font.c  font.h  graphics.c  graphics.h  main.c  player.h  renderer.c  renderer.h  scene.c  scene.h  sprite.h  state.c  state.h  ui.c  ui.h  vec.h  window.c  window.h
res/font/: fira-code-medium.fnt
res/shader/default/: default.fs
res/shader/msdf/: msdf.fs  msdf.vs
res/shader/text/: text.fs  text.vs
